--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Finnish fiction -- 20th century'
 - !lcc 'PH'
+- GITenberg
 title: Pojat asialla
 url: http://www.gutenberg.org/ebooks/14207
